--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.9.3",
     "font-awesome": "^4.7.0",
     "graphql": "^16.3.0",
+    "jotai": "^1.6.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
